[work] fix 'work' layout bug

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -187,23 +187,50 @@ footer > section
 .work__item	
 	box-sizing: border-box
 	display: inline-block
+	vertical-align: top
 	width: 300px
-	height: 100%
-	border: 2px dashed #aaa
-	// padding: 20px
+	min-height: 300px
+	background-color: #fff
+	border: 1px solid #ccc
 	margin: 0 1em 1em 0
-	.work__img
-		display: block
-		box-sizing: border-box
-		width: 100%
-	.work_text
-		display: block
-		box-sizing: border-box
-		padding: 20px
-	.work__img > a, .work__img > a > img
-		display: block
-		width: 100%
-		height: 100%
+	&:hover
+		box-shadow: 2px 2px 10px rgba(#000, 0.2)
+		transition: box-shadow .3s
+
+.work__img
+	display: block
+	box-sizing: border-box
+	width: 100%
+	position: relative
+.work__text
+	display: block
+	box-sizing: border-box
+	padding: 20px
+	padding-bottom: 30px
+	min-height: 100px
+.work__text-title
+	margin: 0
+	padding: 0
+.work__text-desc
+	margin: 0
+	margin-top: 0.5em
+	padding: 0
+	line-height: 1em
+.work__tag
+	display: inline-block
+	list-style-type: none
+	min-width: 10px
+	padding: 0
+	margin-right: 5px
+	font-size: 0.6em
+	line-height: 1em
+	text-align: center
+.work__tag--basic
+	color: lighten($text-color, 25)
+.work__img > a, .work__img > a > img
+	display: block
+	width: 100%
+	height: 100%
 /* Contact */
 .contact__buttons
 	margin-top: 30px
